# autom8

./: AGENTS.md  CONTRIBUTING.md  README.md  agent.py  autom8.py  config_loader.py  pyproject.toml  tools.py
autom8/: __init__.py  agent.py  config_loader.py  tools.py
examples/: agent_config.yaml  autom8_example_agent.py  user_tools.py
